Correct font size on tablet mode

--- a/client/less/basic.less
+++ b/client/less/basic.less
@@ -178,7 +178,7 @@ html {
 }
 
 .tablet-mode-text{
-  font-size: 0px;
+  font-size: 20px;
 }
 
 
